--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,21 @@
 body{
     text-align: center;
     color: crimson;
-    font-size: medium;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0%;
+    padding: 0%;
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: auto;
+}
+#container h1
+{
+    font-size: 20px;
+
 }
