--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    color: crimson;
+    color: black;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
