--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@ body{
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: auto;
@@ -18,4 +18,24 @@ body{
 {
     font-size: 20px;
 
+}
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 5px 20px 0 px rgba(0,0 ,0,0.75,);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
+#cabecera #tagline
+{
+    margin: 0 0 0 1em;
+    
+}
+
+#post
+{
+    padding: 0;
 }
