--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body{
     text-align: center;
     color: black;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace, Helvetica, sans-serif;
     margin: 0%;
     padding: 0%;
 }
